--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.7.4",
+    "react-router-bootstrap": "^0.26.3",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
