--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.7.4",
     "react-router-bootstrap": "^0.26.3",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -24,6 +26,7 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "globals": "^15.9.0",
     "vite": "^5.3.4"
   }
 }
