--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.9.0",
     "vite": "^5.3.4"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
