--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "bootstrap": "^5.2.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.7.4",
-    "react-router-bootstrap": "^0.26.3",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.1"
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^6.26.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
